# EM-takehome

./: README.md  pyproject.toml
src/: config.yaml  data_processing.py  model.py  predictions.py
