[tool.poetry]
name = "EM-takehome"
version = "0.1.0"
description = ""
authors = ["Maksim <maksim@MacBook-Pro-Maksim.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
scikit-learn = "^1.5.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
